<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TimeTrace</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="database_installed">Installed</string>
    <string name="database_record">Record</string>
    <string name="table_installed">installed</string>
    <string name="table_record">record</string>
    <string name="ctrl_bar_monitor_description">switch to monitor page</string>
    <string name="ctrl_bar_analyze_description">switch to analyze page</string>
    <string name="ctrl_bar_setting_description">switch to setting page</string>
    <string name="act_detail_title">process details</string>
    <string name="act_tag_title">set tags</string>
    <string name="ctrl_bar_tag_ok_description">save changes</string>
    <string name="ctrl_bar_tag_cancel_description">do not save changes</string>
    <string name="ctrl_bar_ignore_description">ignore</string>
    <string name="img_welcome_description">welcome picture</string>
    <string name="act_welcome_title">Welcome\n2\nTimeTrace…</string>
    <string name="act_welcome_authority">by HappyStudy…</string>
    <string name="act_welcome_guide">touch to continue</string>
    <string name="state_id">id</string>
    <string name="state_time">time</string>
    <string name="state_location">location</string>
    <string name="state_activity">activity</string>
    <string name="location_info_longitude">longitude</string>
    <string name="location_info_latitude">latitude</string>
    <string name="location_info_speed">speed</string>

    <string name="process_info_app_name">app_name</string>
    <string name="process_info_tag">tag</string>
    <string name="process_info_icon">icon</string>
    <string name="process_info_live_time">live_time</string>
    <string name="process_info_mem_size">mem_size</string>
    <string name="process_info_pack_name">pack_name</string>
    <string name="process_info_pid">pid</string>
    <string name="process_info_start_time">start_time</string>
    <string name="process_info_active">active</string>
    <string name="process_info_active_time">active_time</string>
    <string name="process_info_alive">alive</string>
    <string name="process_info_is_user_process">is_user</string>
    <string name="process_info_date_format">dd, HH:mm:ss</string>
    <string name="process_tag_beautification">beautification</string>
    <string name="process_tag_business">business</string>
    <string name="process_tag_communication">communication</string>
    <string name="process_tag_education">education</string>
    <string name="process_tag_finance">finance</string>
    <string name="process_tag_game">game</string>
    <string name="process_tag_lifestyle">lifestyle</string>
    <string name="process_tag_media">media</string>
    <string name="process_tag_news_information">news_information</string>
    <string name="process_tag_online_shopping">online_shopping</string>
    <string name="process_tag_optimization">optimization</string>
    <string name="process_tag_reading">reading</string>
    <string name="process_tag_social_network">social_network</string>
    <string name="process_tag_system">system</string>
    <string name="process_tag_tool">tool</string>
    <string name="process_tag_travel">travel</string>
    <string name="process_tag_unknown">unknown</string>
    <string name="process_tag_ignore">ignore</string>

    <string name="chart_interval_title">select chart interval</string>
    <string name="chart_interval_day">last day</string>
    <string name="chart_interval_week">last week</string>
    <string name="chart_interval_month">last month</string>
    <string name="chart_type_title">select chart type</string>
    <string name="chart_type_pie">pie chart</string>
    <string name="chart_type_bar">bar chart</string>
    <string name="chart_type_line">line chart</string>
    <string name="chart_ignore_yes">yes</string>
    <string name="chart_ignore_no">no</string>
    <string name="chart_ignore_title">ignore system processes</string>
    <string name="ctrl_bar_share_description">share with friends</string>
    <string name="act_monitor_title">running apps</string>
    <string name="ctrl_bar_contact_description">contact us</string>
    <string name="copyright_description">Copyright  © 2014 HappyStudy.org All Rights Reserved</string>

    <string name="title_activity_location_tag">LocationTagActivity</string>

    <string name="hl_act_tag_eat">吃货</string>
    <string name="hl_act_tag_sleep">觉主</string>
    <string name="hl_act_tag_work">学霸</string>
    <string name="hl_act_tag_motion">压路机</string>
    <string name="hl_act_tag_relax">放轻松</string>
    <string name="hl_act_tag_trifle">日常</string>

    <string name="loc_tag_classroom">教室</string>
    <string name="loc_tag_dinning">餐厅</string>
    <string name="loc_tag_dorm">寝室</string>
    <string name="loc_tag_lab">实验室</string>
    <string name="loc_tag_office">办公室</string>
    <string name="loc_tag_library">图书馆</string>
    <string name="loc_tag_home">家</string>
    <string name="loc_tag_restaurant">饭店</string>
    <string name="loc_tag_stadium">体育馆</string>
    <string name="loc_tag_street">路上</string>
    <string name="loc_tag_park">公园</string>
    <string name="loc_tag_theater">电影院</string>
    <string name="loc_tag_mall">商场</string>
    <string name="loc_tag_snack">黑暗料理</string>
    <string name="loc_tag_unknown">不可知之地</string>

</resources>
