<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_analyze"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@id/rl_viewer"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:visibility="gone">

    <TextView
        android:id="@+id/tv_chart_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chart_interval_title"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/rg_chart_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_chart_interval"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/rb_chart_interval_last_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chart_interval_day" />

        <RadioButton
            android:id="@+id/rb_chart_interval_last_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chart_interval_week" />

        <RadioButton
            android:id="@+id/rb_chart_interval_last_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chart_interval_month" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_chart_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rg_chart_interval"
        android:text="@string/chart_type_title"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/rg_chart_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_chart_type"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/rb_chart_type_pie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chart_type_pie" />

        <RadioButton
            android:id="@+id/rb_chart_type_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chart_type_bar" />

        <RadioButton
            android:id="@+id/rb_chart_type_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chart_type_line" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_chart_ignore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rg_chart_type"
        android:text="@string/chart_ignore_title"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/rg_chart_ignore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_chart_ignore"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/rb_chart_ignore_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chart_ignore_yes" />

        <RadioButton
            android:id="@+id/rb_chart_ignore_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chart_ignore_no" />

    </RadioGroup>

    <ImageButton
        android:id="@+id/ib_share"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/ctrl_bar_share_description"
        android:src="@drawable/share" />

    <RelativeLayout
        android:id="@+id/rl_toShow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rg_chart_ignore">

    </RelativeLayout>

</RelativeLayout>