<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_process_tag_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/act_tag_title"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/rl_process_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <ImageButton
            android:id="@+id/ib_process_tag_cancel"
            android:layout_width="65dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/ctrl_bar_tag_cancel_description"
            android:src="@drawable/error" />

        <ImageButton
            android:id="@+id/ib_process_tag_ok"
            android:layout_width="65dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/ctrl_bar_tag_ok_description"
            android:src="@drawable/tick" />

    </RelativeLayout>

    <ListView
        android:id="@+id/lv_process_tag"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/rl_process_tag">

    </ListView>


</RelativeLayout>